# HydroDesk

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
.omc/sessions/: 022599a8-fb0d-4b05-afdb-7e5d4d071155.json  926a7b81-f505-4bb0-8bbe-87c1323ffb0f.json
.omc/state/: mission-state.json
.omx/: metrics.json
.omx/logs/: turns-2026-04-02.jsonl  turns-2026-04-03.jsonl
.omx/state/: hud-state.json  (+2 more)
.team/: todo.md
docs/: architecture.md  claudecode-lineage-and-agent-stack.md  hydrodesk-25-iteration-delivery-summary.md  hydrodesk-agentic-ide-platform-plan.md  hydrodesk-agentic-ide-roadmap.md  hydrodesk-e2e-fusion-plan.md  offline-mode.md  school-server-publish-plan.md  school-server-ssh-eof-troubleshooting.md  walkthrough.md
e2e/: acceptance-lane-tagging.spec.js  boundary-gate-blocking.spec.js  canal-case-full-pipeline.spec.js  case-shell-matrix.spec.js  check_click.spec.js  check_console.spec.js  contracts-repo-gates.spec.js  daduhe-p0-runtime-review-chain.spec.js  launch-workflow-registry-matrix.spec.js  monitor-scada-replay.spec.js  project-center-case-crud.spec.js  review-live-assets.spec.js  review-release-pack.spec.js  role-profile-header.spec.js  rolloutArtifactGates.js  rolloutCaseIds.js  shellSurfaces.js  six-case-e2e-loop.spec.js  smoke.spec.js  source-selection-and-case-open.spec.js  source-sync-panels.spec.js  workflow-report-template.spec.js  workspaceRoot.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+114 files in other folders)
