[package]
name = "hydrodesk"
version = "0.1.0"
description = "HydroDesk 水网桌面端 - Desktop application for HydroMind"
authors = ["雷晓辉 <leixiaohui@gmail.com>"]
license = "MIT"
repository = "https://github.com/leixiaohui-1974/HydroDesk"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
    "window-close",
    "window-minimize",
    "window-maximize",
    "window-unmaximize",
    "window-start-dragging",
    "window-hide",
    "window-show",
    "dialog-all",
    "fs-all",
    "http-all",
    "shell-open",
] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
